# JIPP2

./: CMakeLists.txt
ESM-Proj2/: CMakeLists.txt
ESM-Proj2/Data/: ESM.exe.stackdump  dane.txt
ESM-Proj2/include/: ESM.h
ESM-Proj2/src/: ESM.cpp  main.cpp
Firstclass/include/: FirstClass.h
Firstclass/src/: FirstClass.cpp  main.cpp
Lab9/: CMakeLists.txt  Line.cpp  Line.h  Stop.cpp  Stop.h  vExample.cpp
Notatnik/: CMakeLists.txt
Notatnik/include/: note.h
Notatnik/src/: main.cpp  note.cpp
Projekt1/: CMakeLists.txt
Projekt1-Matrix/: CMakeLists.txt
Projekt1-Matrix/matrixApp/: CMakeLists.txt  main.cpp
Projekt1-Matrix/matrixLib/: CMakeLists.txt
Projekt1/include/: madlib.h
Projekt1/src/: madlib.cpp  main.cpp
Simple_calc/: CMakeLists.txt
Simple_calc/include/: simplecalc.h
Simple_calc/src/: main.cpp  simplecalc.cpp
allocation_basics/: CMakeLists.txt  main.cpp
firstLib/: CMakeLists.txt
firstLib/include/: lib.h
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt  main.cpp
lab11/: CMakeLists.txt
lab11/include/: csv.h
lab11/src/: csv.cpp  main.cpp
lab12/: CMakeLists.txt
lab12/include/: RAII.h
lab13/: CMakeLists.txt
lab13/include/: TimeMeasure.h
lab13/src/: TimeMeasure.cpp  main.cpp  remain.cpp
lab5/: CMakeLists.txt
lab5/include/: auta.h
lab5/src/: RAII.cpp  auta.cpp  main.cpp
lab6/: CMakeLists.txt
lab6/include/: triangle.h  wektor.h
lab6/src/: main.cpp  triangle.cpp  wektor.cpp
lab7/: CMakeLists.txt
lab7/include/: figury.h
lab7/src/: figury.cpp  main.cpp
lab71/: CMakeLists.txt
lab71/include/: note.h
(+4 files in other folders)
