cmake_minimum_required(VERSION 3.16)

add_subdirectory(Firstclass)

add_subdirectory(allocation_basics)

add_subdirectory(Simple_calc)

add_subdirectory(firstLib)

add_subdirectory(firstLibCall)

add_subdirectory(Projekt1-Matrix)

add_subdirectory(lab5)

add_subdirectory(lab6)

add_subdirectory(lab7)

add_subdirectory(lab71)

add_subdirectory(Lab9)

add_subdirectory(Lab13)

add_subdirectory(ESM-Proj2)
add_subdirectory(Notatnik)

include_directories(".")

